--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,8 +51,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .back-to-top i:hover {
-  background: #3ac162;
-  color: #fff;
+  background: #000000;
+  color: rgb(255, 255, 255);
 }
 
 /*--------------------------------------------------------------
@@ -1133,9 +1133,9 @@ section {
   color: #f38900;
 }
 
-.events .card:hover img {
+ .events .card:hover img {
   transform: scale(1.1);
-}
+} 
 
 .events .card:hover .card-body {
   border-color: #f38900;
@@ -1608,3 +1608,39 @@ section {
   #experimental #main #respuestas-ecuacion>input{
     width: 23ch;
   }
+
+
+/*--------------------------------------------------------------
+# En Construcción
+--------------------------------------------------------------*/
+
+.enConstruccion * {
+  box-sizing: border-box;
+}
+
+.enConstruccion #hero {
+  filter: blur(0px);
+  width: 100%;
+  height: 100%;
+  background: url("../img/aurora.jpg") top center;
+  background-size: cover;
+  position: relative;
+}
+
+
+/* Position text in the middle of the page/image */
+.enConstruccion .bg-text {
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
+  font-weight: bold;
+  border: 3px solid #f1f1f1;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+}
