--- a/assets/css/webComponents.css
+++ b/assets/css/webComponents.css
@@ -1,7 +1,10 @@
 :root{
     font-family: Arial, Helvetica, sans-serif;
 }
-
+[card]:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25);
+    transition: box-shadow 0.5s;
+}
 grupo-card{
     display: flex;
     flex-direction: column;
