--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -489,6 +489,13 @@ section{
   margin: 0;
 }
 
+/*---------------------PORTAL---------------------*/
+.panel{
+  height: 40vh;
+}
+
+
+
 /*---------------------MEDIA QUERIES---------------------*/
 
 
