--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 :root {
-  --main_color: #6EE744;
+  --main_color: #6ee744;
   --gray_color: #2c2b2b;
-  --light_gray_color: #9D9D9D;
-  --secondary_color-1: #D0E744;
-  --secondary_color-2: #E744A6;
-  --secondary_color-3: #44E7C0;
-  --secondary_color-4: #44E78F;
-  --secondary_color-5:  #dd2c2c;;
+  --light_gray_color: #9d9d9d;
+  --secondary_color-1: #d0e744;
+  --secondary_color-2: #e744a6;
+  --secondary_color-3: #44e7c0;
+  --secondary_color-4: #44e78f;
+  --secondary_color-5: #dd2c2c;
 }
 
 /* INDICE
@@ -14,18 +14,11 @@
  * - Texto
 */
 
-
 /*---------------------ELEMENTOS GENERALES---------------------*/
-
-
-
-
-
-
 
 /*CARD*/
 
-.card{
+.card {
   background: #eee;
   color: var(--gray_color);
   display: flex;
@@ -39,58 +32,57 @@
   border-radius: 30px;
 }
 
-.card .secondary{
+.card .secondary {
   color: var(--light_gray_color);
 }
 
-.card a{
+.card a {
   color: var(--main_color);
   text-decoration: none;
   font-weight: bolder;
 }
 
-.card a:hover{
+.card a:hover {
   color: var(--gray_color);
 }
 
-
 /*GLASS EFFECT*/
 
-.glass-effect{
-  background-color: rgba(255, 255, 255, .3);  
+.glass-effect {
+  background-color: rgba(255, 255, 255, 0.3);
   backdrop-filter: blur(15px);
 }
 
 /*SEPARADOR*/
 
-.separador{
-  min-height: 3rem;
-  padding: 3rem;
+.separador {
+  min-height: 1rem;
+  padding: 2rem;
   background: var(--main_color);
   width: 100vw;
   margin: 0rem 0rem;
+  position: relative;
+  z-index: 9;
 }
-  .separador h1{
-    text-align: center;
-    font-size: 3rem;
-
-  }
+.separador h1 {
+  text-align: center;
+  font-size: 3rem;
+  font-weight: 600;
+}
 
 /*NUM PUNTOS*/
-.numPuntos{
+.numPuntos {
   height: auto;
   font-size: 2.7rem;
   padding: 1.5rem 2.5rem;
   background-color: var(--main_color);
   border-radius: 1.5rem;
-  font-weight: 550;
-
+  font-weight: 450;
 }
-
 
 /*FORMS*/
 
-.form-card{
+.form-card {
   color: var(--light_gray_color);
   font-weight: lighter;
   display: flex;
@@ -107,37 +99,35 @@
   margin: 0;
 }
 
-.form-card h3{
+.form-card h3 {
   font-weight: normal;
   font-size: 1rem;
   margin: 1.2rem;
-  
 }
 
-.form-card p{
+.form-card p {
   font-size: 0.8rem;
   color: var(--gray_color);
   font-weight: bolder;
 }
 
-.form-card img{
+.form-card img {
   width: 100%;
   margin: 1rem 0 1rem 0;
 }
 
-
-.form-card form{
+.form-card form {
   width: 100%;
   margin: 0rem;
 }
 
-form label{
+form label {
   font-size: 1rem;
   font-weight: normal;
   background: #eee;
 }
 
-form input{
+form input {
   border: 2px solid var(--light_gray_color);
   color: var(--light_gray_color);
   padding: 8px;
@@ -150,57 +140,52 @@ form input{
   background: #eee;
 }
 
-.inputWithIcon input[type=email], .inputWithIcon input[type=password], .inputWithIcon input[type=text]{
+.inputWithIcon input[type="email"],
+.inputWithIcon input[type="password"],
+.inputWithIcon input[type="text"] {
   width: 100%;
   padding-left: calc(3rem);
   box-sizing: border-box;
 }
 
-.inputWithIcon{
+.inputWithIcon {
   position: relative;
   width: 100%;
 }
-.inputWithIcon svg{
+.inputWithIcon svg {
   position: absolute;
   left: 0px;
   top: 0;
-  padding: calc(0.8625rem - 4px)  0  calc(0.8625rem - 4px) 1rem;
-
+  padding: calc(0.8625rem - 4px) 0 calc(0.8625rem - 4px) 1rem;
 }
 
-.search-bar{
+.search-bar {
   color: var(--gray_color);
-
-
-  
 }
-  .search-bar *{
-    color: var(--gray_color);
-    background: rgba(240, 240, 240, 0.4);
-    border: none;
-  }
-
-
-
-form input::-webkit-input-placeholder { /* Edge */
-  color: var(--light_gray_color);
-  font-weight: lighter;
-
+.search-bar * {
+  color: var(--gray_color);
+  background: rgba(240, 240, 240, 0.4);
+  border: none;
 }
 
-form input:-ms-input-placeholder { /* Internet Explorer 10-11 */
+form input::-webkit-input-placeholder {
+  /* Edge */
   color: var(--light_gray_color);
   font-weight: lighter;
+}
 
+form input:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: var(--light_gray_color);
+  font-weight: lighter;
 }
 
 form input::placeholder {
   color: var(--light_gray_color);
   font-weight: lighter;
-
 }
 
-form input[type="submit"]{
+form input[type="submit"] {
   background-color: var(--main_color);
   border: none;
   color: white;
@@ -208,20 +193,17 @@ form input[type="submit"]{
   margin-top: 0.4rem;
 }
 
-form input[type="submit"]:hover{
+form input[type="submit"]:hover {
   background: var(--gray_color);
   cursor: pointer;
 }
 
-
-
-
-
 /*BLOB*/
 
-.blob{
+.blob {
   position: fixed;
-  top: 0; left: 0;
+  top: 0;
+  left: 0;
   fill: var(--secondary_color-1);
   width: 50vmax;
   z-index: -1;
@@ -229,21 +211,21 @@ form input[type="submit"]:hover{
   margin: 0;
 }
 /* TODO EL DOCUMENTO*/
-*{
-  font-family: 'Roboto', sans-serif;
+* {
+  font-family: "Roboto", sans-serif;
 }
 
-html, body{
+html,
+body {
   margin: 0;
   padding: 0;
   color: var(--gray_color);
   text-align: center;
-  font-family: 'Roboto', sans-serif;
-
+  font-family: "Roboto", sans-serif;
 }
 
 /* TEXTO */
-h1{
+h1 {
   font-size: 4rem;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -251,31 +233,28 @@ h1{
   cursor: default;
 }
 
-p{
+p {
   font-size: 2rem;
   cursor: default;
 }
 
-a,a:visited{
+a,
+a:visited {
   text-decoration: none;
   color: var(--gray_color);
 }
 
-a:hover{
+a:hover {
   color: var(--secondary_color-1);
 }
 
-
-
-
-
 /* NAV-BAR*/
-.nav-cont{
+.nav-cont {
   position: sticky;
   top: 0;
   z-index: 999;
 }
-nav{
+nav {
   position: relative;
   z-index: 52;
   background: var(--main_color);
@@ -286,85 +265,78 @@ nav{
   justify-content: space-between;
   color: var(--gray_color);
 }
-nav:hover{
+nav:hover {
   cursor: default;
 }
-  nav *{
-    font-weight: 500;
-  }
-  nav img{
-    height: 60px;
-    margin: 20px;
-    cursor: pointer;
-   
-  }
- 
-
-  nav ul{
-    margin:0;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
-    flex: 1;
-  }
-    nav ul li{
-      margin: 20px;
-      cursor: pointer;
-    }
-
-  nav+svg{
-    --y-offset: -40px;
-    position: relative;
-    left: 0;
-    right: 0;
-    z-index: 50;
-    margin-top: var(--y-offset);
-    transition: 1s ease-out;
-    transform-origin: center calc(-1*var(--y-offset));
-  }
-  nav.scroll-collapse+svg{
-    transform: scaleY(0);
-  }
-
-
-section{
-  padding-top: 1rem;
-  padding-bottom: 1rem; 
-  padding: 30px
+nav * {
+  font-weight: 500;
 }
-  section>*{
-    width: 100%;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-  }
+nav img {
+  height: 60px;
+  margin: 20px;
+  cursor: pointer;
+}
+
+nav ul {
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  padding: 10px;
+  flex: 1;
+}
+nav ul li {
+  margin: 20px;
+  cursor: pointer;
+}
+
+nav + svg {
+  --y-offset: -40px;
+  position: relative;
+  left: 0;
+  right: 0;
+  z-index: 50;
+  margin-top: var(--y-offset);
+  transition: 1s ease-out;
+  transform-origin: center calc(-1 * var(--y-offset));
+}
+nav.scroll-collapse + svg {
+  transform: scaleY(0);
+}
+
+section {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  padding: 30px;
+}
+section > * {
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+}
 
 /*FOOTER*/
 
-  footer{
-    position: relative;
-    z-index: 49;
-    padding: 0;
-    margin: 0;
-  }
-  
+footer {
+  position: relative;
+  z-index: 49;
+  padding: 0;
+  margin: 0;
+}
 
-
-  /*---------------------INDEX.HTML---------------------*/
+/*---------------------INDEX.HTML---------------------*/
 
 /* HERO*/
-.hero{
+.hero {
   padding-top: 0rem;
   min-height: 70vh;
 }
- 
-
 
 /* ACERCA DE*/
 
-.about{
+.about {
   background: firebrick;
   min-height: 300px;
   z-index: 49;
@@ -374,27 +346,24 @@ section{
 
 /* CONTADOR*/
 
-.count{
+.count {
   background: darkorange;
   min-height: 300px;
 }
 
 /* SMF*/
 
-.smf{
+.smf {
   background: palegreen;
   min-height: 300px;
 }
 
 /*SOBRE NOSOTROS */
 
-.about-us{
+.about-us {
   background: lightcoral;
   min-height: 300px;
 }
-
-
-
 
 /*BOTONES*/
 
@@ -412,13 +381,13 @@ section{
   position: relative;
 }
 
-.btn-1:hover{
+.btn-1:hover {
   background: var(--secondary_color-1);
   cursor: pointer;
 }
 
 /*---------------------LOGIN---------------------*/
-.login-container{
+.login-container {
   z-index: 49;
   position: absolute;
   width: 100vw;
@@ -428,54 +397,52 @@ section{
   justify-content: center;
 }
 
-.login-card{
+.login-card {
   z-index: 49;
   margin: 10vmax 20vmax;
   padding: 0;
   max-height: 100vh;
-  overflow: scroll
+  overflow: scroll;
 }
 
-.login-card .form-card{
+.login-card .form-card {
   width: 50%;
   z-index: 11;
   padding: 2.5rem;
   box-sizing: border-box;
 }
 
-.login-container .form-card *{
+.login-container .form-card * {
   flex-shrink: 1;
 }
 
-.login-container .form-card img{
+.login-container .form-card img {
   margin-top: 0;
   width: 80%;
 }
 
-
-.login-card .img-container{
+.login-card .img-container {
   width: 50%;
-  display:inline-block;
+  display: inline-block;
   position: relative;
 }
 
+.login-card .img-container::after {
+  content: "";
+  top: 0;
+  left: 0;
+  z-index: 12;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: absolute;
+  background: var(--main_color);
+  opacity: 0.65;
+  border-radius: 0 30px 30px 0;
+}
 
-.login-card .img-container::after{
-  content:'';
-    top: 0;
-    left: 0;
-    z-index: 12;
-    width: 100%;
-    height: 100%;
-    display: block;
-    position: absolute;
-    background: var(--main_color);
-    opacity: 0.65;
-    border-radius: 0 30px 30px 0;
-} 
-
-.img-container .bg{
-  object-fit: cover; 
+.img-container .bg {
+  object-fit: cover;
   height: 100%;
   width: 100%;
   position: absolute;
@@ -496,37 +463,36 @@ section{
   transform: translateY(-50%);
 }
 
-.img-container .wrap-img-p .logo{
+.img-container .wrap-img-p .logo {
   width: 100%;
 }
 
-.img-container .wrap-img-p p{
+.img-container .wrap-img-p p {
   font-weight: lighter;
   font-size: 1rem;
   color: #eee;
   line-height: 1.3rem;
 }
 
-.or{
+.or {
   width: 80%;
   text-align: center;
   border-bottom: 1px solid var(--light_gray_color);
   border-bottom: 1px solid rgb(157, 157, 157);
-  border-bottom: 1px solid rgba(157, 157, 157, .4);
+  border-bottom: 1px solid rgba(157, 157, 157, 0.4);
   -webkit-background-clip: padding-box; /* for Safari */
   background-clip: padding-box; /* for IE9+, Firefox 4+, Opera, Chrome */
   line-height: 0rem;
 }
 
-.or span { 
-  background:#eee; 
-  padding:0 10px; 
+.or span {
+  background: #eee;
+  padding: 0 10px;
   color: rgb(157, 157, 157);
-  color: rgba(157, 157, 157, .4);
+  color: rgba(157, 157, 157, 0.4);
 }
 
-
-.logos-redes{
+.logos-redes {
   display: flex;
   justify-content: space-evenly;
   flex-direction: row;
@@ -535,116 +501,156 @@ section{
   margin: 0;
 }
 
-.logos-redes *{
+.logos-redes * {
   margin: 0;
 }
 
 /*---------------------PORTAL---------------------*/
-.header-portal nav{
-  height: fit-content ;
+.header-portal nav {
+  height: fit-content;
+  top: 0;
+  position: sticky;
 }
 
-  .header-portal nav {
-    align-items: center;
-  }
-  .header-portal nav * {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-  }
+.header-portal nav {
+  align-items: center;
+}
+.header-portal nav * {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-  .header-portal nav img{
-    height: 40px;
-    flex-grow: 0;
-    margin: auto;
-  }
+.header-portal nav img {
+  height: 40px;
+  flex-grow: 0;
+  margin: auto;
+}
 
-  .header-portal .inputWithIcon{
-    
-    margin: 1rem 20%;
-  }
+.header-portal .inputWithIcon {
+  margin: 1rem 20%;
+}
 
-  .inputWithIcon svg{
-    background: none;
-  }
+.inputWithIcon svg {
+  background: none;
+}
 
-  .header-portal .search-bar{
-    min-width: 200px;
-  }
+.header-portal .search-bar {
+  min-width: 200px;
+}
 
-  .box:first-child > span { margin-right: auto; }
-  
-  .box:last-child  > span { margin-left: auto;  }
+.box:first-child > span {
+  margin-right: auto;
+}
+
+.box:last-child > span {
+  margin-left: auto;
+}
 
 /*Hero*/
-.panel-hero{
+.panel-hero {
   position: relative;
   z-index: 1;
-
 }
-  .panel-hero .card{
-    width: 50vw;
-    height: 60%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-  .panel-hero svg{
-    width: auto;
-  }
+.panel-hero .card {
+  width: 50vw;
+  height: 60%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.panel-hero svg {
+  width: auto;
+}
+/*MAIN */
 
-  
+.portal-main {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
 
+.portal-main aside {
+  flex-grow: 0;
+  padding: 2rem 0rem 1rem 6rem;
+}
 
+.portal-main aside ul {
+  padding: 1rem;
+  margin: 0rem;
+  text-align: left;
+}
+
+.portal-main aside li {
+  margin: 0;
+  padding: 1rem;
+  color: var(--light_gray_color);
+}
+.portal-main aside h {
+  margin: 0;
+  padding: 1rem 0.5rem 1rem 0.5rem;
+  color: var(--light_gray_color);
+}
+
+.portal-main article {
+  flex-grow: 1;
+}
+
+.portal-main ul {
+  list-style: none;
+}
+
+.mis-listas {
+  margin: 2rem;
+}
+
+.resumen-listas {
+}
 
 /*---------------------MEDIA QUERIES---------------------*/
 
-
-
 /* SMALL */
-@media only screen and (max-width: 640px){
+@media only screen and (max-width: 640px) {
   html {
     font-size: 90%;
   }
 
-  nav, nav ul{
+  nav,
+  nav ul {
     flex-direction: column;
     justify-content: stretch;
-    margin: 0
+    margin: 0;
   }
 
-  
-
-  nav img{
+  nav img {
     margin-bottom: 0px !important;
   }
-  .hero-buttons{
+  .hero-buttons {
     display: flex;
     flex-direction: column;
-    max-width: 40vw  !important; 
+    max-width: 40vw !important;
     align-items: center;
   }
-  .hero-buttons button{
+  .hero-buttons button {
     margin-left: 0 !important;
     margin-right: 0 !important;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
   }
 
-  .hero h1{
+  .hero h1 {
     font-size: 2.5rem;
     position: relative;
     z-index: 49;
   }
 
-  .hero p{
+  .hero p {
     font-size: 1.5rem;
-    
   }
 
-  nav+svg{
+  nav + svg {
     --y-offset: -4px;
   }
 
@@ -655,58 +661,58 @@ section{
     max-height: 100vh;
     overflow: scroll;
     margin: 15px;
-   }
- 
-   .login-card>*{
-     width: 100%  !important;
-   }
- 
-   .login-card .img-container,.login-card .img-container::after {
-     flex-grow: 1;
-     flex-shrink: 0;
-     height: 170px;
-   }
- 
-   .login-card .form-card {
-     flex-grow: 1;
-     flex-shrink: 1;
-   }
+  }
+
+  .login-card > * {
+    width: 100% !important;
+  }
+
+  .login-card .img-container,
+  .login-card .img-container::after {
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 170px;
+  }
+
+  .login-card .form-card {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
 }
 
 /*MEDIUM*/
 @media only screen and (min-width: 641px) and (max-width: 1025px) {
- 
-  nav{
+  nav {
     display: flex;
     flex-direction: column;
     justify-content: stretch;
-    margin: 0
+    margin: 0;
   }
-  nav ul{
+  nav ul {
     width: 90vw;
   }
 
-  nav ul li{
-    margin: 10px 
+  nav ul li {
+    margin: 10px;
   }
-  nav img{
+  nav img {
     margin-bottom: 0px !important;
   }
-  .hero-buttons{
+  .hero-buttons {
     text-align: center;
   }
 
-  nav+svg{
+  nav + svg {
     --y-offset: -4px;
   }
 
-  .hero h1{
+  .hero h1 {
     font-size: 3rem;
     position: relative;
     z-index: 49;
   }
 
-  .hero p{
+  .hero p {
     font-size: 1.8rem;
     position: relative;
     z-index: 49;
@@ -715,16 +721,17 @@ section{
   /*LOGIN*/
 
   .login-card {
-   flex-direction: column-reverse;
-   max-height: 100vh;
-   overflow: scroll;
+    flex-direction: column-reverse;
+    max-height: 100vh;
+    overflow: scroll;
   }
 
-  .login-card>*{
-    width: 100%  !important;
+  .login-card > * {
+    width: 100% !important;
   }
 
-  .login-card .img-container,.login-card .img-container::after {
+  .login-card .img-container,
+  .login-card .img-container::after {
     flex-grow: 1;
     flex-shrink: 0;
     height: 170px;
@@ -737,28 +744,28 @@ section{
 }
 
 /*LARGE BUT WIDE AND SUPER-SHORT*/
-@media only screen and (min-width: 1026px) and (max-height: 401px){
-
+@media only screen and (min-width: 1026px) and (max-height: 401px) {
   /*LOGIN*/
 
   .login-card {
     flex-direction: column-reverse;
     max-height: 100vh;
     overflow: scroll;
-   }
- 
-   .login-card>*{
-     width: 100%  !important;
-   }
- 
-   .login-card .img-container,.login-card .img-container::after {
-     flex-grow: 1;
-     flex-shrink: 0;
-     height: 170px;
-   }
- 
-   .login-card .form-card {
-     flex-grow: 1;
-     flex-shrink: 1;
-   }
+  }
+
+  .login-card > * {
+    width: 100% !important;
+  }
+
+  .login-card .img-container,
+  .login-card .img-container::after {
+    flex-grow: 1;
+    flex-shrink: 0;
+    height: 170px;
+  }
+
+  .login-card .form-card {
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
 }
