--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,18 +237,24 @@ h1 {
 h2 {
   font-weight: 400;
   font-size: 3rem;
+  cursor: default;
 }
 
 h3 {
   font-size: 2.5rem;
+  cursor: default;
 }
 
 h4 {
   font-size: 1.4rem;
+  cursor: default;
 }
 
 p {
   font-size: 1rem;
+}
+
+li {
   cursor: default;
 }
 
@@ -693,6 +699,7 @@ footer {
   color: white;
   font-size: 4rem;
   font-weight: lighter;
+  cursor: default;
 }
 
 /*---------------------MEDIA QUERIES---------------------*/
