Added docs about questions

--- a/phystrainer-notebook/notebook/PTNotebookCellBase.css
+++ b/phystrainer-notebook/notebook/PTNotebookCellBase.css
@@ -13,6 +13,7 @@
         padding: 16px;
         display: inline-block;
         width: 100%;
+        box-sizing: border-box;
     }
     :host>.input{
         display: none;
