--- a/public/components/PTExerciseCell/PTExerciseCell.css
+++ b/public/components/PTExerciseCell/PTExerciseCell.css
@@ -29,7 +29,7 @@
     :host(.editing)>.input{
         display: block;
     }
-        :host>.input>button{
+        :host>.input>#controls{
             margin: 8px 16px 8px auto;
             display: block;
         }
