Exercise notebook visual changes

--- a/public/components/PTExerciseCell/PTExerciseCell.css
+++ b/public/components/PTExerciseCell/PTExerciseCell.css
@@ -1,9 +1,9 @@
 :host{
     font-family: Arial, Helvetica, sans-serif;
-    max-width: 800px;
+    /* max-width: 800px;
     width: 100%;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto; */
     border-bottom: 0.5px solid rgb(220, 220, 220);
     display: block;
 }
@@ -30,8 +30,9 @@
         display: block;
     }
         :host>.input>#controls{
-            margin: 8px 16px 8px auto;
-            display: block;
+            margin: 8px 16px;
+            display: flex;
+            justify-content: flex-end;
         }
 
     
